...

public final class WMFHybridSearchSuggestionsViewModel: ObservableObject {

    public struct LocalizedStrings {
        public let searchForLabel: String

        public init(searchForLabel: String = "Search for:") {
            self.searchForLabel = searchForLabel
        }
    }

    @Published public var titles: [String]
    @Published public var searchTerm: String
...
